# tme290-group-10

./: .gitignore  .gitlab-ci.yml  README.md  build_rover.sh  h264-replay-viewer.yml  messages.hpp  rover-services.yml  services-simulation.yml  services.yml  simulation-kiwi-two.yml  simulation-task1.yml  simulation-task2.yml  simulation-task3.yml  simulation.yml  start_rover.sh  start_rover_sim.sh  start_sim.sh  structure-overview.puml  update-messages.sh  update-remote-containers.sh
action-planner/: CMakeLists.txt  Dockerfile
action-planner/src/: cone_coder.hpp  kiwi_location.hpp  main.cpp
aimpoint-driver/: CMakeLists.txt  Dockerfile
aimpoint-driver/src/: aimpoint-finder.hpp  aimpoint_finder_base.hpp  avg_aimpoint_finder.hpp  closest_aimpoint_finder.hpp  line.hpp  main.cpp
cone-detection/: CMakeLists.txt  Dockerfile
cone-detection-tester/: .gitignore  CMakeLists.txt  main.cpp
cone-detection/src/: cone_location.hpp  kiwi_location.hpp  main.cpp  messages.hpp
conetrack/: map.json
custom-dockers/: build.sh  eigen-opencv-fast.dockerfile  eigen-opencv.dockerfile
custom-dockers/lib/: libopencv_calib3d.so.4.3.0  libopencv_features2d.so.4.3.0  libopencv_flann.so.4.3.0  libopencv_gapi.so.4.3.0  libopencv_highgui.so.4.3.0  libopencv_imgcodecs.so.4.3.0  libopencv_ml.so.4.3.0  libopencv_objdetect.so.4.3.0  libopencv_photo.so.4.3.0  libopencv_stitching.so.4.3.0  libopencv_video.so.4.3.0  (+1 more)
debug-drawer/: CMakeLists.txt  Dockerfile
kiwi-detection/: CMakeLists.txt  Dockerfile
messages/: custom-messages.odvd
opendlv-tutorial-kiwi/: run_replay_viewer.sh  start.sh
(+16 files in other folders)
